correcciones en actor id
